fix: scrollbar width

--- a/app/globals.css
+++ b/app/globals.css
@@ -95,7 +95,7 @@
 
 *::-webkit-scrollbar,
 html::-webkit-scrollbar {
-  width: 3px;
+  width: 8px;
   height: 6px;
 }
 
